--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ p {
 }
 
 .social-links a:hover {
-  color: #dc7ef3;
+  color: #df8af5;
 }
 
 .links {
@@ -101,7 +101,7 @@ p {
 }
 
 .links button:hover {
-  background-color: #fab2f4;
+  background-color: #fc8bf2;
   transform: translateY(-2px);
 }
 
